--- a/web/src/scss/modules/_card.scss
+++ b/web/src/scss/modules/_card.scss
@@ -72,14 +72,14 @@
 //   margin-left: 1rem;
 // }
 
-.filter-row,
-.sample-row {
-  align-items: baseline;
-  justify-content: space-between;
-  margin-right: 0;
-  margin-left: 0;
-}
+// .filter-row,
+// .sample-row {
+//   align-items: baseline;
+//   justify-content: space-between;
+//   margin-right: 0;
+//   margin-left: 0;
+// }
 
-.sample-row {
-  display: flex;
-}
+// .sample-row {
+//   display: flex;
+// }
